# Cubenizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CubenizerGame/: CMakeLists.txt
CubenizerGame/include/: BufferFactory.hpp  Camera.hpp  ComposedVertex.hpp  Cube.hpp  CubeFaces.hpp  Exception.hpp  Geometry.hpp  GeometryMesh.hpp  IBuilder.hpp  Mesh.hpp  MeshBuilder.hpp  MeshData.hpp  MeshFactory.hpp  MeshTypes.hpp  Model.hpp  Orientation.hpp  Rendering.hpp  RenderingSystem.hpp  ShaderProgram.hpp  ShaderTypes.hpp  ShaderUnit.hpp  Texture.hpp  TextureTypes.hpp  VertexData.hpp  Viewport.hpp  Window.hpp  World.hpp
CubenizerGame/res/: fragment.glsl  vertex.glsl
CubenizerGame/src/: BufferFactory.cpp  Camera.cpp  Common.cpp  Cube.cpp  GeometryMesh.cpp  IBuilder.cpp  Main.cpp  Mesh.cpp  MeshBuilder.cpp  MeshFactory.cpp  Model.cpp  Orientation.cpp  Rendering.cpp  RenderingSystem.cpp  ShaderProgram.cpp  Window.cpp  World.cpp
cubenizer-debug-gcc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cubenizer-release-gcc/: CMakeCache.txt  build.ninja  cmake_install.cmake
include/: Camera.h  Camera.hpp  Common.hpp  Geometry.h  Geometry.hpp  GeometryMesh.hpp  GeometryObject.h  GeometryObject.hpp  List.hpp  Matrix.h  Matrix.hpp  Matrix4.hpp  Model.h  Model.hpp  Rendering.h  Rendering.hpp  Set.h  ShaderProgram.h  ShaderProgram.hpp  ShaderUnit.h  ShaderUnit.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  VertexData.hpp  Window.h  Window.hpp  World.h  World.hpp
src/: Camera.c  Camera.cpp  Common.c  GeometryMesh.cpp  GeometryObject.c  GeometryObject.cpp  (+24 more)
(+10 files in other folders)
